tests/ui/invalid-compile-flags/print-file-names-request-malformed-crate-name-1.stderr
error: malformed `crate_name` attribute input
  --> $DIR/print-file-names-request-malformed-crate-name-1.rs:4:1
   |
LL | #![crate_name]
   | ^^^^^^^^^^^^^^ help: must be of the form: `#![crate_name = "name"]`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/crates-and-source-files.html#the-crate_name-attribute>

error: aborting due to 1 previous error

